# TestCMake

GenLib/: CMakeLists.txt  User.cpp  main.cpp
MultiDir/: CMakeLists.txt
MultiDir/lib/: CMakeLists.txt
MultiDir/src/: CMakeLists.txt
MultiFile/: CMakeLists.txt  main.cpp
OneFile/: CMakeLists.txt  main.cpp
OutputDir/: CMakeLists.txt
OutputDir/lib/: CMakeLists.txt  User.h
OutputDir/src/: CMakeLists.txt
so/: CMakeLists.txt
so/lib/: CMakeLists.txt  User.cpp  User.h  cmake_install.cmake
so/lib/CMakeScripts/: user_postBuildPhase.makeDebug  user_postBuildPhase.makeMinSizeRel  user_postBuildPhase.makeRelWithDebInfo  user_postBuildPhase.makeRelease
so/lib/OutputDir.build/Debug/user.build/: Script-393D4398CC944600915A3B19.sh  dgph
so/lib/OutputDir.build/Debug/user.build/Objects-normal/x86_64/: User.d  User.dia  user.LinkFileList
so/src/: cmake_install.cmake  main.cpp
so/src/OutputDir.build/Debug/muldir.build/: dgph
so/src/OutputDir.build/Debug/muldir.build/Objects-normal/x86_64/: main.d  main.dia  muldir.LinkFileList
